--- a/EN/services.html
+++ b/EN/services.html
@@ -25,129 +25,81 @@ title: Services
         techniques are applied.
       </p>
     </div>
+  </div>
 
-    <div class="service">
-      <img
-        class="service__image"
-        src="/Images/Jaras/Pregnancy_massage.jpg"
-        alt="Massage 5"
-      />
-      <div class="service__description">
-        <h2>Supporting young mum with postnatal massage and baby massage lesson</h2>
-        <p>XXXXXXXXXXXXXXXXXXXXXXX.</p>
-        <p>
-          XXXXXXXXXXXXXXXXXXXXx
-        </p>
-        <p>
-          XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-        </p>
-      </div>
-
-    <div class="service">
-      <img
-        class="service__image"
-        src="/Images/Downloaded/massage-2768833_1920.jpg"
-        alt="Massage 1"
-      />
-      <div class="service__description">
-        <h2>Deep tissue / Therapeutic massage</h2>
-        <p>
-          Deep tissue massage is suitable for all people with problems with
-          mustles of the whole body.
-        </p>
-        <p>
-          One of the most common reasons for people to have a deep tissue
-          massage is the general aches and pains that fall under the broad
-          definition of rheumatic pains, aching joints and muscle spasms.
-        </p>
-        <p>
-          The main underlying cause of many symptoms manifested in the body is
-          stress.
-        </p>
-      </div>
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Pregnancy_massage.jpg"
+      alt="Massage 5"
+    />
+    <div class="service__description">
+      <h2>
+        Supporting young mum with postnatal massage and baby massage lesson
+      </h2>
+      <p>XXXXXXXXXXXXXXXXXXXXXXX.</p>
+      <p>XXXXXXXXXXXXXXXXXXXXx</p>
+      <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
     </div>
+  </div>
 
-
-    <div class="service">
-      <img
-        class="service__image"
-        src="/Images/Jaras/Hand_massage.jpg"
-        alt="Massage 4"
-      />
-      <div class="service__description">
-        <h2>Manual lymphatic drainage</h2>
-        <p>
-          This massage is based on Dr. Vodder techniques. Lymphatic drainage
-          massages can benefit people with lymphedema, fibromyalgia, and other
-          conditions.
-        </p>
-        <p>
-          It is a form of gentle massage that encourages the movement of lymph
-          fluids around the body.
-        </p>
-        <p>
-          The fluid in the lymphatic system helps remove waste and toxins from
-          the bodily tissues.
-        </p>
-      </div>
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Downloaded/massage-2768833_1920.jpg"
+      alt="Massage 1"
+    />
+    <div class="service__description">
+      <h2>Deep tissue / Therapeutic massage</h2>
+      <p>
+        Deep tissue massage is suitable for all people with problems with
+        mustles of the whole body.
+      </p>
+      <p>
+        One of the most common reasons for people to have a deep tissue massage
+        is the general aches and pains that fall under the broad definition of
+        rheumatic pains, aching joints and muscle spasms.
+      </p>
+      <p>
+        The main underlying cause of many symptoms manifested in the body is
+        stress.
+      </p>
     </div>
+  </div>
 
-    <div class="service">
-      <img
-        class="service__image"
-        src="/Images/Jaras/Hand_massage.jpg"
-        alt="Massage 4"
-      />
-      <div class="service__description">
-        <h2>Facial massage</h2>
-        <!-- <p>
-          This massage is based on Dr. Vodder techniques. Lymphatic drainage
-          massages can benefit people with lymphedema, fibromyalgia, and other
-          conditions.
-        </p>
-        <p>
-          It is a form of gentle massage that encourages the movement of lymph
-          fluids around the body.
-        </p>
-        <p>
-          The fluid in the lymphatic system helps remove waste and toxins from
-          the bodily tissues.
-        </p>  -->
-      </div>
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Hand_massage.jpg"
+      alt="Massage 4"
+    />
+    <div class="service__description">
+      <h2>Manual lymphatic drainage</h2>
+      <p>
+        This massage is based on Dr. Vodder techniques. Lymphatic drainage
+        massages can benefit people with lymphedema, fibromyalgia, and other
+        conditions.
+      </p>
+      <p>
+        It is a form of gentle massage that encourages the movement of lymph
+        fluids around the body.
+      </p>
+      <p>
+        The fluid in the lymphatic system helps remove waste and toxins from the
+        bodily tissues.
+      </p>
     </div>
+  </div>
 
-    <div class="service">
-      <img
-        class="service__image"
-        src="/Images/Jaras/Neck_massage.jpg"
-        alt="Massage 3"
-      />
-      <div class="service__description">
-        <h2>India head massage</h2>
-        <p>
-          It is a great stress buster, and although we call it a head massage,
-          we incorporate the back, shoulders and arms.
-        </p>
-        <p>
-          This treatment is good for corporate clients as it is non-invasive and
-          you do not need to remove any clothing.
-        </p>
-        <p>
-          The physical benefits that can be gained: Ease tight muscles, releases
-          shoulders, therefore improving posture.
-        </p>
-      </div>
-    </div>
-
-    <div class="service">
-      <img
-        class="service__image"
-        src="/Images/Jaras/Hand_massage.jpg"
-        alt="Massage 4"
-      />
-      <div class="service__description">
-        <h2>Svedish massage</h2>
-        <!-- <p>
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Hand_massage.jpg"
+      alt="Massage 4"
+    />
+    <div class="service__description">
+      <h2>Facial massage</h2>
+      <!-- <p>
           This massage is based on Dr. Vodder techniques. Lymphatic drainage
           massages can benefit people with lymphedema, fibromyalgia, and other
           conditions.
@@ -160,7 +112,53 @@ title: Services
           The fluid in the lymphatic system helps remove waste and toxins from
           the bodily tissues.
         </p>  -->
-      </div>
+    </div>
+  </div>
+
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Neck_massage.jpg"
+      alt="Massage 3"
+    />
+    <div class="service__description">
+      <h2>India head massage</h2>
+      <p>
+        It is a great stress buster, and although we call it a head massage, we
+        incorporate the back, shoulders and arms.
+      </p>
+      <p>
+        This treatment is good for corporate clients as it is non-invasive and
+        you do not need to remove any clothing.
+      </p>
+      <p>
+        The physical benefits that can be gained: Ease tight muscles, releases
+        shoulders, therefore improving posture.
+      </p>
+    </div>
+  </div>
+
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Hand_massage.jpg"
+      alt="Massage 4"
+    />
+    <div class="service__description">
+      <h2>Svedish massage</h2>
+      <!-- <p>
+          This massage is based on Dr. Vodder techniques. Lymphatic drainage
+          massages can benefit people with lymphedema, fibromyalgia, and other
+          conditions.
+        </p>
+        <p>
+          It is a form of gentle massage that encourages the movement of lymph
+          fluids around the body.
+        </p>
+        <p>
+          The fluid in the lymphatic system helps remove waste and toxins from
+          the bodily tissues.
+        </p>  -->
     </div>
   </div>
 
