social media, cancellation policy

--- a/EN/contact.html
+++ b/EN/contact.html
@@ -20,7 +20,41 @@ title: Contact
   <p>
     I am pleased when you are satisfied with my services. I welcome every
     feedback so that I can treat you better in the future. Please send mi your
-    testimonial on my e-mail or send an SMS.
+    testimonial on my e-mail, send an SMS or get in touch with me on my social
+    media.
+  </p>
+
+  <h1>Updates and discounts</h1>
+  <p>
+    Don't miss the opportunities to see the latest updates and occasional
+    discounts by following me on social networks.
+    <a href="https://www.facebook.com/jaroslava.drobna.3"
+      ><img
+        class="footer__image"
+        src="/images/logos/facebook-icon.png"
+        alt="Ikona Facebook"
+    /></a>
+
+    <a href="https://www.fht.org.uk/users/drobna149837"
+      ><img
+        class="footer__image"
+        src="/images/logos/fht_logo.png"
+        alt="Ikona FHT"
+    /></a>
+
+    <a href="https://instagram.com/straphaelrevive?igshid=OGQ5ZDc2ODk2ZA=="
+      ><img
+        class="footer__image"
+        src="/images/logos/instagram-icon.png"
+        alt="Ikona Instagramu"
+    /></a>
+
+    <a href="https://uk.linkedin.com/in/jaroslava-drobna-9b357133"
+      ><img
+        class="footer__image"
+        src="/images/logos/linkedin-icon-2-logo-svgrepo-com.svg"
+        alt="Ikona LinkedIn"
+    /></a>
   </p>
 </section>
 
@@ -39,7 +73,7 @@ title: Contact
     <div class="contact__title">
       <h2>Payment</h2>
       <p>Cash</p>
-      <p>Credit card</p>
+      <p>Card payment</p>
       <p>Bank transfer</p>
     </div>
   </div>
