--- a/EN/prices.html
+++ b/EN/prices.html
@@ -45,10 +45,10 @@ title: Prices
       </tr>
     </table>
 
-    <p>
+    <!-- <p>
       I will soon offer baby massage lessons when I will teach mothers to warm
       up and stretch bodies of their babies.
-    </p>
+    </p> -->
   </div>
 
   <div class="pricing">
@@ -94,7 +94,19 @@ title: Prices
   </p>
   <p class="pricing__special-info">
     It is possible to pay in cash, by a bank transfer, credit card, PayPal or
-    Monzo. Information for a bank transfer is available in
-    <a class="pricing__link" href="/EN/contact.html">Contact.</a>
+    <!-- Monzo. Information for a bank transfer is available in
+    <a class="pricing__link" href="/EN/contact.html">Contact.</a> -->
+  </p>
+
+  <p class="pricing__special-info">
+    Cancellation policy: <br />
+    I respect that your time is very valuable and I appreciate that you
+    understand mine is valuable too. If you cancelled or rescheduled an
+    appointment at short notice I wouldn't be able to book another client. If
+    you think that you are going to be unable to attend your appointment, I
+    would appreciate if you can give me as much notice as possible. I’ll be
+    pleased to cancel and reschedule your appointment at any time, without any
+    penalty up to 7 hours before your booking. Any cancellation less than 7
+    hours, the full price will be charged. All deposits are non-refundable.
   </p>
 </section>
