--- a/cenik.html
+++ b/cenik.html
@@ -45,10 +45,10 @@ title: Ceník
       </tr>
     </table>
 
-    <p>
+    <!-- <p>
       Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak
       zahřát a protáhnout tělíčka svých miminek.
-    </p>
+    </p> -->
   </div>
 
   <div class="pricing">
@@ -94,7 +94,18 @@ title: Ceník
   </p>
   <p class="pricing__special-info">
     Platby je možné provádět bankovním převodem, v hotovosti, kreditní kartou,
-    prostřednictívm PayPal i Monzo. Informace ohledně bankovního převodu najdete
-    v sekci <a class="pricing__link" href="/kontakt/">Kontakt.</a>
+    <!-- prostřednictívm PayPal i Monzo. Informace ohledně bankovního převodu najdete
+    v sekci <a class="pricing__link" href="/kontakt/">Kontakt.</a> -->
+  </p>
+
+  <p class="pricing__special-info">
+    Storno podmínky: <br />
+    Uvědomuji si, že váš čas je velmi cenný a děkuji, že i Vy považujete můj za
+    cenný. Pokud zrušíte nebo změníte termín masáže narychlo, nemohu si
+    zarezervovat dalšího klienta. Domníváte-li se, že se nebudete moci zúčastnit
+    schůzky, I ocenila bych, kdybyste mi dali co nejdříve vědět. Velmi ráda si
+    Vámi domluvím náhradní termín nebo schůzku zrušíme bez jakýchkoliv penále,
+    pokud se mi ozvete minimálně 7 hodin předem. Za jakékoli zrušení méně než 7
+    hodin předem bude účtována plná cena. Všechny zálohy jsou nevratné.
   </p>
 </section>
