--- a/kontakt.html
+++ b/kontakt.html
@@ -22,6 +22,39 @@ title: Kontakt
     vazbu, abych se Vám mohlo v budoucnosti lépe věnovat. Pošlete mi prosím Vaši
     recenzi na e-mail či pomocí SMS.
   </p>
+
+  <h1>Aktuality a slevy</h1>
+  <p>
+    Nenechte si ujít žádné novinky a příležitostné slevy a sledujte mě na
+    sociálních sítích.
+    <a href="https://www.facebook.com/jaroslava.drobna.3"
+      ><img
+        class="footer__image"
+        src="/images/logos/facebook-icon.png"
+        alt="Ikona Facebook"
+    /></a>
+
+    <a href="https://www.fht.org.uk/users/drobna149837"
+      ><img
+        class="footer__image"
+        src="/images/logos/fht_logo.png"
+        alt="Ikona FHT"
+    /></a>
+
+    <a href="https://instagram.com/straphaelrevive?igshid=OGQ5ZDc2ODk2ZA=="
+      ><img
+        class="footer__image"
+        src="/images/logos/instagram-icon.png"
+        alt="Ikona Instagramu"
+    /></a>
+
+    <a href="https://uk.linkedin.com/in/jaroslava-drobna-9b357133"
+      ><img
+        class="footer__image"
+        src="/images/logos/linkedin-icon-2-logo-svgrepo-com.svg"
+        alt="Ikona LinkedIn"
+    /></a>
+  </p>
 </section>
 
 <section class="contact">
@@ -39,7 +72,7 @@ title: Kontakt
     <div class="contact__title">
       <h2>Přijímám platby</h2>
       <p>V hotovosti</p>
-      <p>Kreditní kartou</p>
+      <p>Platba kartou</p>
       <p>Bankovní převod</p>
     </div>
   </div>
