--- a/sluzby.html
+++ b/sluzby.html
@@ -82,16 +82,17 @@ title: Služby
         Lymfatický systém pomáhá odstraňovat škodlivé látky a toxiny z těla.
       </p>
     </div>
+  </div>
 
-    <div class="service">
-      <img
-        class="service__image"
-        src="/Images/Jaras/Hand_massage.jpg"
-        alt="Massage 4"
-      />
-      <div class="service__description">
-        <h2>Masáž obličeje</h2>
-        <!-- <p>
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Hand_massage.jpg"
+      alt="Massage 4"
+    />
+    <div class="service__description">
+      <h2>Masáž obličeje</h2>
+      <!-- <p>
           Tato masáž je založena na technice Dr. Voddera. Lymfatická masáž pomáhá
           lidem s lymfedémem, fibromyalgií a dalšími zdravotními problémy.
         </p>
@@ -102,39 +103,41 @@ title: Služby
         <p>
           Lymfatický systém pomáhá odstraňovat škodlivé látky a toxiny z těla.
         </p> -->
-      </div>
+    </div>
+  </div>
 
-    <div class="service">
-      <img
-        class="service__image"
-        src="/Images/Jaras/Neck_massage.jpg"
-        alt="Massage 3"
-      />
-      <div class="service__description">
-        <h2>Indická masáž hlavy</h2>
-        <p>
-          Velmi pomáhá snižovat stres a ačkoliv se nazývá masáž hlavy,
-          zahrnujeme i záda, ramena a paže.
-        </p>
-        <p>
-          Tato masáž je vhodná pro firemní klienty, jelikož není invazivní a
-          není třeba se svlékat.
-        </p>
-        <p>
-          Mezi fyzické výhody této masáže patří: uvolnění napjatých svalů,
-          uvolňuje ramena a tím i zlepšuje postoj těla.
-        </p>
-      </div>
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Neck_massage.jpg"
+      alt="Massage 3"
+    />
+    <div class="service__description">
+      <h2>Indická masáž hlavy</h2>
+      <p>
+        Velmi pomáhá snižovat stres a ačkoliv se nazývá masáž hlavy, zahrnujeme
+        i záda, ramena a paže.
+      </p>
+      <p>
+        Tato masáž je vhodná pro firemní klienty, jelikož není invazivní a není
+        třeba se svlékat.
+      </p>
+      <p>
+        Mezi fyzické výhody této masáže patří: uvolnění napjatých svalů,
+        uvolňuje ramena a tím i zlepšuje postoj těla.
+      </p>
+    </div>
+  </div>
 
-      <div class="service">
-        <img
-          class="service__image"
-          src="/Images/Jaras/Hand_massage.jpg"
-          alt="Massage 4"
-        />
-        <div class="service__description">
-          <h2>Švédská masáž</h2>
-          <!-- <p>
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Hand_massage.jpg"
+      alt="Massage 4"
+    />
+    <div class="service__description">
+      <h2>Švédská masáž</h2>
+      <!-- <p>
             Tato masáž je založena na technice Dr. Voddera. Lymfatická masáž pomáhá
             lidem s lymfedémem, fibromyalgií a dalšími zdravotními problémy.
           </p>
@@ -145,7 +148,6 @@ title: Služby
           <p>
             Lymfatický systém pomáhá odstraňovat škodlivé látky a toxiny z těla.
           </p> -->
-        </div>
     </div>
   </div>
 
